--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 params {
 	//Directory for VCF input files. The pipeline currently doesn't run very well on single files - it needs more exception handling, so please use more than 5 (it can run one one, but it might not work)
 	input_data = "set/your/directory/*.vcf"
-	//Set the output directory for the summary file
+	//Set the output directory for the summary pdf file
 	outputDir = "set/your/directory/"	
 }
