--- a/nextflow.config
+++ b/nextflow.config
@@ -1,8 +1,8 @@
 params {
 	//Directory for VCF input files. The pipeline currently doesn't run very well on single files - it needs more exception handling, so please use more than 5 (it can run one one, but it might not work)
-	input_data = "set/your/directory/novel_contigs.vcf"
-	//Set the output directory for the summary pdf file
-	outputDir = "set/your/directory/"
-	//For debug only
-	tempDir = "$HOME/VEPfiles"
+	input_data = "*/novel_contigs.vcf"
+	//Set the output directory for the summary file
+	outputDir = "*/output_dir_TCGA_LAML"	
+	//Debug only
+	//tempDir = "$HOME/scratch/VEPfiles"
 }
