--- a/nextflow.config
+++ b/nextflow.config
@@ -5,4 +5,6 @@ params {
 	outputDir = "*/output_dir_TCGA_LAML"	
 	//Debug only
 	//tempDir = "$HOME/scratch/VEPfiles"
+	Cosmic_tab="*/database"
+
 }
